update room and schedule

--- a/pages/csed415/2025sp.md
+++ b/pages/csed415/2025sp.md
@@ -15,10 +15,10 @@ practice these concepts through hands-on lab assignments and a team project.
 
 ### ℹ️ Information
 * Instructor: [Seulbae Kim](https://seulbae-security.github.io)
-* TA: TBD
+* TA: Hyuksoon Jang (hyuksoon@postech.ac.kr)
 * Term: Spring 2025 (Feb 17, 2024 ~ June 5, 2024)
 * Time: Tuesdays and Thursdays, 2:00 AM ~ 3:15 PM
-* Location: Room 107, Science Building II
+* Location: Room 106, Science Building II
 
 ### 🗓️ Schedule
 
@@ -32,7 +32,7 @@ practice these concepts through hands-on lab assignments and a team project.
 
 ##### Part 1: Attacks and Defenses
 * Week 3
-  * [Lec 05: x86 Assembly]()
+  * [Lec 05: Assembly and GDB]()
   * [Lec 06: Shellcode, Buffer Overflow, and Control Flow]()
 * Week 4
   * [Lec 07: Attacks and Defenses (1)]()
@@ -47,27 +47,27 @@ practice these concepts through hands-on lab assignments and a team project.
   * [Lec 12: Digital Signatures and Certificates]()
 * Week 7
   * [Lec 13: Secure Communication]()
-  * [Lec 14: Overview for Midterm Exam]()
+  * Lec 14: Project Proposals
 
-##### Midterm Exam and Project Proposal
+##### Midterm Exam
 * Week 8
   * Midterm Exam
-* Week 9
-  * [Lec 15: Midterm Exam Review]()
-  * [Lec 16: Project Proposals]()
 
 ##### Part 3: Authentication and Authorization
+* Week 9
+  * [Lec 15: Authentication (1)]()
+  * [Lec 16: Authentication (2)]()
 * Week 10
-  * [Lec 17: Authentication (1)]()
-  * [Lec 18: Authentication (2)]()
-* Week 11
-  * [Lec 19: Access Control (1)]()
-  * [Lec 20: Access Control (2)]()
+  * [Lec 17: Access Control (1)]()
+  * [Lec 18: Access Control (2)]()
 
 ##### Part 4: Systems and Software Security
-* Week 12
-  * [Lec 21: Malware]()
-  * [Lec 22: Anti-malware]()
+* Week 11
+  * [Lec 19: Malware]()
+  * [Lec 20: Anti-malware]()
+* Week 12 (Official holidays)
+  * (Children's Day) [Lec 21: Recent topics]()
+  * (POSTECH Festival) [Lec 22: Recent topics]()
 * Week 13
   * [Lec 23: Denial-of-Service and Firewall]()
   * [Lec 24: Database Security]()
