update csed415 2025sp

--- a/pages/csed415/2025sp.md
+++ b/pages/csed415/2025sp.md
@@ -16,7 +16,7 @@ practice these concepts through hands-on lab assignments and a team project.
 ### ℹ️ Information
 * Instructor: [Seulbae Kim](https://seulbae-security.github.io)
 * TA: Hyuksoon Jang (hyuksoon@postech.ac.kr)
-* Term: Spring 2025 (Feb 17, 2024 ~ June 5, 2024)
+* Term: Spring 2025 (Feb 17, 2025 ~ June 5, 2025)
 * Time: Tuesdays and Thursdays, 2:00 AM ~ 3:15 PM
 * Location: Room 106, Science Building II
 
@@ -24,30 +24,30 @@ practice these concepts through hands-on lab assignments and a team project.
 
 ##### Part 0: Basics and Principles
 * Week 1
-  * [Lec 01: Introduction]()
-  * [Lec 02: The Basics]()
+  * [Lec 01: Introduction](/assets/lec/csed415/2025sp/csed415-lec01.pdf)
+  * [Lec 02: The Fundamentals](/assets/lec/csed415/2025sp/csed415-lec02.pdf)
 * Week 2
-  * [Lec 03: Secure Coding]()
-  * [Lec 04: Trusting Trust]()
+  * [Lec 03: Secure Coding](/assets/lec/csed415/2025sp/csed415-lec03.pdf)
+  * [Lec 04: On Trusting Trust](/assets/lec/csed415/2025sp/csed415-lec04.pdf)
 
 ##### Part 1: Attacks and Defenses
 * Week 3
-  * [Lec 05: Assembly and GDB]()
-  * [Lec 06: Shellcode, Buffer Overflow, and Control Flow]()
+  * [Lec 05: x86_64 Assembly](/assets/lec/csed415/2025sp/csed415-lec05.pdf)
+  * [Lec 06: Shellcode, Buffer Overflow, and Control Flow](/assets/lec/csed415/2025sp/csed415-lec06.pdf)
 * Week 4
-  * [Lec 07: Attacks and Defenses (1)]()
-  * [Lec 08: Attacks and Defenses (2)]()
+  * [Lec 07: Attacks and Defenses (1)](/assets/lec/csed415/2025sp/csed415-lec07.pdf)
+  * [Lec 08: Attacks and Defenses (2)](/assets/lec/csed415/2025sp/csed415-lec08.pdf)
 
 ##### Part 2: Cryptographic Primitives and Applications
 * Week 5
-  * [Lec 09: Cryptography (1)]()
-  * [Lec 10: Cryptography (2)]()
+  * [Lec 09: Symmetric Cryptography](/assets/lec/csed415/2025sp/csed415-lec09.pdf)
+  * [Lec 10: Asymmetric Cryptography](/assets/lec/csed415/2025sp/csed415-lec10.pdf)
 * Week 6
-  * [Lec 11: Hash and MAC]()
-  * [Lec 12: Digital Signatures and Certificates]()
+  * [Lec 11: Hash, Message Authentication Code, and Authenticated Encryption](/assets/lec/csed415/2025sp/csed415-lec11.pdf)
+  * [Lec 12: Digital Signatures and Certificates](/assets/lec/csed415/2025sp/csed415-lec12.pdf)
 * Week 7
-  * [Lec 13: Secure Communication]()
-  * Lec 14: Project Proposals
+  * [Lec 13: TLS and HTTPS](/assets/lec/csed415/2025sp/csed415-lec13.pdf)
+  * Lec 14: Team Project Proposals
 
 ##### Midterm Exam
 * Week 8
@@ -55,30 +55,30 @@ practice these concepts through hands-on lab assignments and a team project.
 
 ##### Part 3: Authentication and Authorization
 * Week 9
-  * [Lec 15: Authentication (1)]()
-  * [Lec 16: Authentication (2)]()
+  * [Lec 15: Authentication (1)](/assets/lec/csed415/2025sp/csed415-lec15.pdf)
+  * [Lec 16: Authentication (2)](/assets/lec/csed415/2025sp/csed415-lec16.pdf)
 * Week 10
-  * [Lec 17: Access Control (1)]()
-  * [Lec 18: Access Control (2)]()
+  * [Lec 17: Discretionary Access Control](/assets/lec/csed415/2025sp/csed415-lec17.pdf)
+  * [Lec 18: Mandatory Access Control](/assets/lec/csed415/2025sp/csed415-lec18.pdf)
 
 ##### Part 4: Systems and Software Security
 * Week 11
-  * [Lec 19: Malware]()
-  * [Lec 20: Anti-malware]()
-* Week 12 (Official holidays)
-  * (Children's Day) [Lec 21: Recent topics]()
-  * (POSTECH Festival) [Lec 22: Recent topics]()
+  * [Lec 19: Malware](/assets/lec/csed415/2025sp/csed415-lec19.pdf)
+  * [Lec 20: Anti-malware](/assets/lec/csed415/2025sp/csed415-lec20.pdf)
+* Week 12 (Official holidays - recorded lectures)
+  * (Children's Day) Lec 21: Review of Lab Assignments
+  * (POSTECH Festival) Lec 22: Review of Midterm Exam
 * Week 13
-  * [Lec 23: Denial-of-Service and Firewall]()
-  * [Lec 24: Database Security]()
+  * [Lec 23: Denial-of-Service and Firewall](/assets/lec/csed415/2025sp/csed415-lec23.pdf)
+  * [Lec 24: Database Security](/assets/lec/csed415/2025sp/csed415-lec24.pdf)
 * Week 14
-  * [Lec 25: Fuzzing]()
-  * [Lec 26: Symbolic Execution]()
+  * [Lec 25: Fuzzing](/assets/lec/csed415/2025sp/csed415-lec25.pdf)
+  * [Lec 26: Symbolic Execution](/assets/lec/csed415/2025sp/csed415-lec26.pdf)
 
 ##### Final Exam and Project Presentation
 * Week 15
-  * Lec 27: Project Presentations (1)
-  * Lec 28: Project Presentations (2)
+  * Lec 27: Team Project Presentations (1)
+  * Lec 28: Team Project Presentations (2)
 * Week 16
   * Final Exam
 
