--- a/pages/csed415/2025sp.md
+++ b/pages/csed415/2025sp.md
@@ -17,7 +17,7 @@ practice these concepts through hands-on lab assignments and a team project.
 * Instructor: [Seulbae Kim](https://seulbae-security.github.io)
 * TA: Hyuksoon Jang (hyuksoon@postech.ac.kr)
 * Term: Spring 2025 (Feb 17, 2025 ~ June 5, 2025)
-* Time: Tuesdays and Thursdays, 2:00 AM ~ 3:15 PM
+* Time: Tuesdays and Thursdays, 2:00 PM ~ 3:15 PM
 * Location: Room 106, Science Building II
 
 ### 🗓️ Schedule
